# gh-sync

./: .gitignore  AGENTS.md  Cargo.toml  README.md  build.rs  gh-sync  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: About.md
script/: build.sh
src/: config.rs  gitops.rs  main.rs
src/gh_sync/: __init__.py  cli.py  config.py  gitops.py
tests/: cli.rs  conftest.py  test_cli.py
