[tool.poetry]
name = "gh-sync"
version = "0.1.0"
description = "Git subtree helper CLI"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "gh_sync", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1"
pydantic = "^2.7"

[tool.poetry.scripts]
gh-sync = "gh_sync.cli:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-cov = "^5.0"
